--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway|Montserrat&display=swap');
 
+@font-face{
+    src: url('../fonts/Allison_Script.otf');
+    font-family: "Alison";
+}
+
 body{
     font-family: 'Montserrat','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: whitesmoke;
@@ -34,6 +39,8 @@ header{
 time{
     grid-area: date;
     text-align: end;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 address{
@@ -77,4 +84,27 @@ section span{
 
 section > footer{
     text-align: right;
+}
+
+#signature{
+    font-family: 'Alison',serif;
+    font-size: 1.8em;
+    padding-right: 2em;
+}
+
+@media all and (max-width:600px){
+
+    main{
+        width: 98vw;
+    }
+
+    header{
+        display: flex;
+        flex-direction: column;
+    }
+
+    header > ul{
+        width: 80%;
+    }
+
 }
